@@ -10,6 +10,11 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.authentication.BadCredentialsException;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -19,10 +24,14 @@ import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.bind.annotation.RequestBody;
 
+import com.planify.server.authentification.JwtUtil;
+import com.planify.server.controller.returnsClass.AuthentificationRequest;
+import com.planify.server.controller.returnsClass.AuthentificationResponse;
 import com.planify.server.controller.returnsClass.UserShort;
 import com.planify.server.models.LessonLecturer;
 import com.planify.server.models.TAF;
 import com.planify.server.models.User;
+import com.planify.server.repo.UserRepository;
 import com.planify.server.service.LessonLecturerService;
 import com.planify.server.service.TAFManagerService;
 import com.planify.server.service.TAFService;
@@ -48,9 +57,18 @@ public class UserController {
     @Autowired
     private TAFService tafService;
 
+    @Autowired
+    private AuthenticationManager authenticationManager;
+
+    @Autowired
+    private JwtUtil jwtUtil;
+
+    @Autowired
+    private PasswordEncoder passwordEncoder;
+
     // Get the list of the users
     @RequestMapping(value = "users", method = RequestMethod.GET)
-    public ResponseEntity<?> getTAFById(@RequestParam("tafId") Long tafId) {
+    public ResponseEntity<?> getUsers(@RequestParam("tafId") Long tafId) {
         Optional<TAF> taf = tafService.findById(tafId);
         if (taf.isEmpty()) {
             return ResponseEntity.status(HttpStatus.BAD_REQUEST)
@@ -59,8 +77,8 @@ public class UserController {
         List<User> users = userService.findAll();
         List<UserShort> answers = new ArrayList<>();
         for (User user : users) {
-            List<TAF> tafs = (user.getLessonLecturers()).stream().map(LessonLecturer::getTAF).filter(x -> x.equals(taf))
-                    .collect(Collectors.toList());
+            List<TAF> tafs = (user.getLessonLecturers()).stream().map(LessonLecturer::getTAF).filter(x -> x.equals(taf.get()))
+                    .toList();
             if (!tafs.isEmpty()) {
                 answers.add(new UserShort(user.getId(), user.getFullName(), true));
             } else {
@@ -82,8 +100,52 @@ public class UserController {
         System.out.println(userRequest.getFirstName());
         System.out.println(userRequest.getLastName());
         User u = userService.addUser(userRequest.getFirstName(), userRequest.getLastName(), userRequest.getEmail(),
-                "not implemented".toCharArray());
+                "not implemented");
         return ResponseEntity.ok("User created !");
+    }
+
+    @PostMapping("/auth/register")
+    public ResponseEntity<?> registerUser(@RequestBody User user) {
+        // Check if username already exists
+        if (userService.findByMail(user.getMail()).isPresent()) {
+            return ResponseEntity.badRequest().body("Username already taken");
+        }
+
+        // Hash the password before saving
+        user.setPassword(passwordEncoder.encode(user.getPassword()));
+        userService.save(user);
+
+        return ResponseEntity.ok("User registered successfully");
+    }
+
+    /**
+     * ✅ User Login Endpoint
+     */
+    @PostMapping("/auth/login")
+    public ResponseEntity<?> login(@RequestBody AuthentificationRequest authRequest) {
+        try {
+            // Authenticate user credentials
+            authenticationManager.authenticate(
+                    new UsernamePasswordAuthenticationToken(authRequest.getMail(), authRequest.getPassword()));
+
+            // Retrieve UserDetails from UserRepository
+            Optional<User> userOptional = userService.findByMail(authRequest.getMail());
+            if (userOptional.isEmpty()) {
+                return ResponseEntity.status(404).body("User not found");
+            }
+
+            UserDetails userDetails = new org.springframework.security.core.userdetails.User(
+                    userOptional.get().getMail(), userOptional.get().getPassword(), new ArrayList<>());
+
+            // Generate JWT token
+            String jwt = jwtUtil.generateToken(userDetails.getUsername());
+
+            // Return token in response
+            return ResponseEntity.ok(new AuthentificationResponse(jwt));
+
+        } catch (BadCredentialsException e) {
+            return ResponseEntity.status(401).body("Invalid username or password");
+        }
     }
 
 }
